--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         * {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-        } //字体设置
+        } <--!字体设置-->
         
         .screen {
             position: fixed;
@@ -122,7 +122,7 @@
             <div class="bg-white rounded-3xl p-8 max-w-sm w-full text-center shadow-2xl card-hover">
                 <div class="mb-8">
                     <div class="w-32 h-32 mx-auto bg-gradient-to-br from-pink-200 to-pink-400 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fas fa-envelope text-white text-4xl"></i> //信封图标
+                        <i class="fas fa-envelope text-white text-4xl"></i> <--!信封图标-->
                     </div>
                     <h1 class="text-3xl font-bold text-gray-900 mb-2">Offer</h1>
                     <p class="text-gray-600">您收到了一份工作邀请</p>
